# uc-intg-wiim

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  readme.md  requirements.txt  test_connection.py  test_wiim_api.py  wiim_service_discovery.py
.github/workflows/: build.yml
lib/: ucapi-0.7.0-py3-none-any.whl
uc_intg_wiim/: __init__.py  __main__.py  browser.py  client.py  config.py  const.py  device.py  driver.py  media_player.py  remote.py  select.py  sensor.py  setup.py  setup_flow.py
