[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-wiim"
version = "1.0.8"
description = "WiiM Integration for Unfolded Circle Remote Two/3"
readme = "README.md"
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.11"
dependencies = [
    "ucapi>=0.3.1",
    "aiohttp>=3.8.0",
    "websockets>=11.0",
    "zeroconf>=0.75.0",
    "pyee>=8.0.0",
    "certifi>=2022.0.0",
]

[project.urls]
"Homepage" = "https://github.com/mase1981/uc-intg-wiim"
"Bug Reports" = "https://github.com/mase1981/uc-intg-wiim/issues"
"Source" = "https://github.com/mase1981/uc-intg-wiim"

[project.scripts]
uc-intg-wiim = "uc_intg_wiim.driver:main"

[tool.setuptools]
packages = ["uc_intg_wiim"]

[tool.setuptools.package-data]
uc_intg_wiim = ["*.json"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]