[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-wiim"
description = "WiiM Integration for Unfolded Circle Remote Two/3"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
keywords = [
    "unfoldedcircle",
    "integration",
    "wiim",
    "media-player",
    "remote-control"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "ucapi>=0.5.3",
    "ucapi-framework>=1.9.1",
    "aiohttp>=3.9.0",
    "certifi>=2023.0.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/mase1981/uc-intg-wiim"
"Bug Reports" = "https://github.com/mase1981/uc-intg-wiim/issues"
"Source" = "https://github.com/mase1981/uc-intg-wiim"

[tool.setuptools]
packages = ["uc_intg_wiim"]

[tool.setuptools.dynamic]
version = {attr = "uc_intg_wiim.__version__"}

[tool.setuptools.package-data]
uc_intg_wiim = ["*.json"]
